A bit of fixes after renaming

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fullscreenContainer"
-        android:name="com.example.smartfragments.FirstFragment"
+        android:name="com.alesh.smartfragments.FirstFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
